major refactoring where unused variable and methods removed